[tool.poetry]
name = "fact"
version = "0.1.0"
description = "Tool to collect, process and visualise forensic data from clusters of machines"
authors = []
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
parallel-ssh = "^2.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.2"
mypy = "^0.910"
black = "^21.9b0"
pytest = "^6.2.5"
mkcommit = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
